<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the service?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_10">Good(10%)</string>
    <string name="okay_5">Okay(5%)</string>
    <string name="round_up_to">Round up to?</string>
    <string name="make_bill">Make Bill</string>
    <string name="tip_amount">Tip Amount :</string>
    <string name="_00_00">00.00</string>
</resources>